# runpod-serverless-template

./: .gitignore  Dockerfile  Dockerfile-GPU  Dockerfile.old  README.md  pyproject.toml  test_input.json
app/: api.py  handler.py
utils/: gradio_web_ui.py  locustfile.py  runpod_inference.py  sample_request.py  standalone_inference.py
